syntax = "proto3";

package calculator;

option go_package="./calculatorpb";

message SumRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message SumReponse {
    int32 result = 1;
}

message SoNTRequest {
    int32 number = 1;
}

message SoNTReqonse {
    int32 result = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumReponse) {}
    rpc SoNT (SoNTRequest) returns (stream SoNTReqonse) {}

}